--- a/nitinshetty.net/css/freelancer.css
+++ b/nitinshetty.net/css/freelancer.css
@@ -10,6 +10,13 @@ body {
 
 p {
     font-size: 20px;
+   
+ 
+}
+
+.about{
+	font-size: 20px;
+    text-align: justify;
 }
 
 p.small {
@@ -115,7 +122,8 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 4.75em;
+        /*font-size: 4.75em;*/
+        font-size:  3.00em;
     }
 
     header .intro-text .skills {
@@ -421,6 +429,8 @@ footer .footer-below {
 
 .portfolio-modal .modal-content {
     padding: 100px 0;
+        padding-top:1em;
+    margin-top:0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -432,6 +442,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content h2 {
     margin: 0;
+
     font-size: 3em;
 }
 
